package com.bbva.utilitieslib.interfaces

import android.os.Bundle

interface IBundle {

    fun toBundle(): Bundle
}
